{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 25,
  "lineage": "38fe102d-3579-236f-71c7-6af75d3012d8",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "dev_default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:260206841774:network-acl/acl-0b5d446a196d95ba1",
            "default_network_acl_id": "acl-0b5d446a196d95ba1",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b5d446a196d95ba1",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "260206841774",
            "subnet_ids": [
              "subnet-022e49f2c0ae51a23",
              "subnet-062b5dae2e2680e9d",
              "subnet-07bc7a48fa9f8c31f",
              "subnet-08fa12431f68a1ebf",
              "subnet-0d4d9e4af0999805c",
              "subnet-0e56b1a95673fd613"
            ],
            "tags": {
              "Name": "spoon-default",
              "TerraformManaged": "true"
            },
            "vpc_id": "vpc-00e4eaf3964a0445c"
          },
          "dependencies": [
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "dev_default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:260206841774:security-group/sg-0ed9c5feefe2a2b9b",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ed9c5feefe2a2b9b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "owner_id": "260206841774",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "spoon-default",
              "TerraformManaged": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e4eaf3964a0445c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0414f3b429bb52feb",
            "public_dns": "ec2-3-34-86-14.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.34.86.14",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0bef7b964254694d0",
            "public_dns": "ec2-52-78-124-90.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.78.124.90",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:260206841774:internet-gateway/igw-0dc9c294c8e5d5c0c",
            "id": "igw-0dc9c294c8e5d5c0c",
            "owner_id": "260206841774",
            "tags": {
              "Name": "spoon",
              "TerraformManaged": "true"
            },
            "vpc_id": "vpc-00e4eaf3964a0445c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0414f3b429bb52feb",
            "id": "nat-0e016dbabb6f74835",
            "network_interface_id": "eni-00c8a389bcf12dad2",
            "private_ip": "172.17.1.74",
            "public_ip": "3.34.86.14",
            "subnet_id": "subnet-022e49f2c0ae51a23"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bef7b964254694d0",
            "id": "nat-080960cc19a7d066b",
            "network_interface_id": "eni-094cf862062fe5b28",
            "private_ip": "172.17.2.14",
            "public_ip": "52.78.124.90",
            "subnet_id": "subnet-0d4d9e4af0999805c"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0eb831426db0514ef",
            "owner_id": "260206841774",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0e016dbabb6f74835",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "spoon-private-ap-northeast-2a",
              "TerraformManaged": "true"
            },
            "vpc_id": "vpc-00e4eaf3964a0445c"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0304bc189dab2ce1d",
            "owner_id": "260206841774",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-080960cc19a7d066b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "spoon-private-ap-northeast-2c",
              "TerraformManaged": "true"
            },
            "vpc_id": "vpc-00e4eaf3964a0445c"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-092b9ee8a585f64a0",
            "owner_id": "260206841774",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dc9c294c8e5d5c0c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "spoon-public",
              "TerraformManaged": "true"
            },
            "vpc_id": "vpc-00e4eaf3964a0445c"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c5674f0a5f56c4a",
            "route_table_id": "rtb-0eb831426db0514ef",
            "subnet_id": "subnet-0e56b1a95673fd613"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05039c7c82bd8cbee",
            "route_table_id": "rtb-0304bc189dab2ce1d",
            "subnet_id": "subnet-07bc7a48fa9f8c31f"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09feeeed7c4d2ad76",
            "route_table_id": "rtb-0eb831426db0514ef",
            "subnet_id": "subnet-062b5dae2e2680e9d"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051b59e644a8cf26c",
            "route_table_id": "rtb-0304bc189dab2ce1d",
            "subnet_id": "subnet-08fa12431f68a1ebf"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085b0fca0cc1c4853",
            "route_table_id": "rtb-092b9ee8a585f64a0",
            "subnet_id": "subnet-022e49f2c0ae51a23"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5c49b6aed27b066",
            "route_table_id": "rtb-092b9ee8a585f64a0",
            "subnet_id": "subnet-0d4d9e4af0999805c"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:260206841774:subnet/subnet-0e56b1a95673fd613",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.17.201.0/24",
            "id": "subnet-0e56b1a95673fd613",
            "map_public_ip_on_launch": false,
            "owner_id": "260206841774",
            "tags": {
              "Name": "spoon-db-ap-northeast-2a",
              "TerraformManaged": "true"
            },
            "vpc_id": "vpc-00e4eaf3964a0445c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:260206841774:subnet/subnet-07bc7a48fa9f8c31f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "172.17.202.0/24",
            "id": "subnet-07bc7a48fa9f8c31f",
            "map_public_ip_on_launch": false,
            "owner_id": "260206841774",
            "tags": {
              "Name": "spoon-db-ap-northeast-2c",
              "TerraformManaged": "true"
            },
            "vpc_id": "vpc-00e4eaf3964a0445c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:260206841774:subnet/subnet-062b5dae2e2680e9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.17.101.0/24",
            "id": "subnet-062b5dae2e2680e9d",
            "map_public_ip_on_launch": false,
            "owner_id": "260206841774",
            "tags": {
              "Name": "spoon-private-ap-northeast-2a",
              "TerraformManaged": "true"
            },
            "vpc_id": "vpc-00e4eaf3964a0445c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:260206841774:subnet/subnet-08fa12431f68a1ebf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "172.17.102.0/24",
            "id": "subnet-08fa12431f68a1ebf",
            "map_public_ip_on_launch": false,
            "owner_id": "260206841774",
            "tags": {
              "Name": "spoon-private-ap-northeast-2c",
              "TerraformManaged": "true"
            },
            "vpc_id": "vpc-00e4eaf3964a0445c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:260206841774:subnet/subnet-022e49f2c0ae51a23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.17.1.0/24",
            "id": "subnet-022e49f2c0ae51a23",
            "map_public_ip_on_launch": false,
            "owner_id": "260206841774",
            "tags": {
              "Name": "spoon-public-ap-northeast-2a",
              "TerraformManaged": "true"
            },
            "vpc_id": "vpc-00e4eaf3964a0445c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:260206841774:subnet/subnet-0d4d9e4af0999805c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "172.17.2.0/24",
            "id": "subnet-0d4d9e4af0999805c",
            "map_public_ip_on_launch": false,
            "owner_id": "260206841774",
            "tags": {
              "Name": "spoon-public-ap-northeast-2c",
              "TerraformManaged": "true"
            },
            "vpc_id": "vpc-00e4eaf3964a0445c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:260206841774:vpc/vpc-00e4eaf3964a0445c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-0b5d446a196d95ba1",
            "default_route_table_id": "rtb-055d0d60543b31dbb",
            "default_security_group_id": "sg-0ed9c5feefe2a2b9b",
            "dhcp_options_id": "dopt-b052c6db",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00e4eaf3964a0445c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-055d0d60543b31dbb",
            "owner_id": "260206841774",
            "tags": {
              "Name": "spoon",
              "TerraformManaged": "true"
            }
          }
        }
      ]
    }
  ]
}